4ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hola
  namespace: prueba
spec:
  rules:
  - host: patito.io
    http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hola-servi
              port:
                number: 80
